--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <nav class="navbar navbar-light bg-light justify-content-between">
                <div id="mySidenav" class="sidenav">
                   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                  <a href="index.html">Branda</a>
-                  <a href="products.html">Produk</a>
-                  <a href="about.html">Tentang Kami</a>
-                  <a href="client.html">Pelanggan</a>
-                  <a href="contact.html">Kontak</a>
+                  <a href="#">Branda</a>
+                  <a href="#">Produk</a>
+                  <a href="#">Tentang Kami</a>
+                  <a href="#">Pelanggan</a>
+                  <a href="#">Kontak</a>
                </div>
                <span class="toggle_icon" onclick="openNav()"><img src="images/Togle-Menu.png"></span>
                <a class="logo" href="index.html"><img src="images/Logo-Warda-Bouquet.png"></a></a>
